// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress measure location inside 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="inside-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        >
          33%
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location inside and small should render large 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-inside pf-m-lg pf-m-singleline"
    id="large-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    />
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        >
          33%
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location none 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="none-progress"
  >
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location outside 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-outside pf-m-singleline"
    id="outside-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress measure location top 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="top-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size lg 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-lg pf-m-singleline"
    id="lg-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size md 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="md-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress size sm 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-sm pf-m-singleline"
    id="sm-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant danger 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-danger pf-m-singleline"
    id="danger-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant success 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-success pf-m-singleline"
    id="success-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm7.795 11.795-8.646 8.646c-.317.317-.733.475-1.149.475s-.832-.158-1.149-.475l-4.646-4.646a1.126 1.126 0 0 1 1.591-1.591l4.205 4.205 8.205-8.205a1.126 1.126 0 0 1 1.591 1.591Z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress variant warning 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-warning pf-m-singleline"
    id="warning-progress"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
      <span
        class="pf-v6-c-progress__status-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 32 32"
          width="1em"
        >
          <path
            d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
          />
        </svg>
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Progress with aria-valuetext 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="progress-aria-valuetext"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      aria-valuetext="Descriptive text here"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Simple progress 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="progress-simple-example"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        33%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`additional label 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="additional-label"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        Additional label
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 33%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`no value specified 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="no-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value higher than maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="higher-max-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        100%
      </span>
    </div>
    <div
      aria-valuemax="60"
      aria-valuemin="0"
      aria-valuenow="77"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 100%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value lower than minValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="lower-min-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        0%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="40"
      aria-valuenow="33"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 0%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled between minValue and maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-range-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        57%
      </span>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="10"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 57%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled with maxValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-max-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        62%
      </span>
    </div>
    <div
      aria-valuemax="80"
      aria-valuemin="0"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 62%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`value scaled with minValue 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-progress pf-m-singleline"
    id="scaled-min-value"
  >
    <div
      aria-hidden="true"
      class="pf-v6-c-progress__status"
    >
      <span
        class="pf-v6-c-progress__measure"
      >
        44%
      </span>
    </div>
    <div
      aria-valuemax="100"
      aria-valuemin="10"
      aria-valuenow="50"
      class="pf-v6-c-progress__bar"
      role="progressbar"
    >
      <div
        class="pf-v6-c-progress__indicator"
        style="width: 44%;"
      >
        <span
          class="pf-v6-c-progress__measure"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
